test/integration/bad/new/ill-formed-expression55.stan
transformed data { 1.0 %  while